tests/duarouter/alternatives/style2_input/errors/route/route_prob_empty/alts.duarouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 08/25/14 11:20:28 by SUMO duarouter Version dev-SVN-r16908
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/duarouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <alternative-files value="input_alts.rou.alt.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd"/>
